vac-rs/crates/control-plane/control-plane/src/local_runtime/snapshots/vac_core__local_runtime__tests_serde__golden_runtime_event_task_started.snap
---
source: core/src/local_runtime/tests_serde.rs
expression: "RuntimeEvent::TaskStarted(TaskStarted::new(fixed_task()))"
---
{
  "TaskStarted": {
    "task": {
      "id": "22222222-2222-2222-2222-222222222222",
      "session_id": "11111111-1111-1111-1111-111111111111",
      "kind": "semantic_coding",
      "prompt": "Fix the auth module",
      "status": "running"
    }
  }
}
