vac-rs/crates/control-plane/control-plane/src/local_runtime/snapshots/vac_core__local_runtime__tests_serde__golden_runtime_event_tool_call_finished.snap
---
source: core/src/local_runtime/tests_serde.rs
expression: "RuntimeEvent::ToolCallFinished(ToolCallFinished::new(fixed_task_id(),\nfixed_tool_call_id(), \"shell\", Some(\"ok\".to_string()), true,))"
---
{
  "ToolCallFinished": {
    "task_id": "22222222-2222-2222-2222-222222222222",
    "tool_call_id": "44444444-4444-4444-4444-444444444444",
    "tool_name": "shell",
    "output_preview": "ok",
    "success": true
  }
}
